test/testdata/classes/invalid_unary_op_error.lox
fun f() {}
-f; // error: '-' operator cannot be used with type 'function'
